[gd_scene load_steps=5 format=3 uid="uid://cr3wlwwtkl161"]

[ext_resource type="Script" path="res://ganador_jugador.gd" id="1_kt6l5"]
[ext_resource type="Texture2D" uid="uid://6acdlgynv54g" path="res://JugarDeNuevo.png" id="2_4p6wt"]
[ext_resource type="Texture2D" uid="uid://ci0u6wjqikmjm" path="res://Menu Principal.png" id="3_etqs7"]
[ext_resource type="Texture2D" uid="uid://wgs4awpekssp" path="res://VisitaInstagram.png" id="4_qhte6"]

[node name="GanadorJugador" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kt6l5")

[node name="Ganador" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 30
text = "Ganador"

[node name="Jugar de nuevo" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 480.0
offset_bottom = 204.0
scale = Vector2(0.299896, 0.311253)
icon = ExtResource("2_4p6wt")
flat = true

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 112.0
offset_right = 364.0
offset_bottom = 268.0
scale = Vector2(0.286807, 0.278828)
icon = ExtResource("3_etqs7")
flat = true

[node name="Instagram" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 168.0
offset_right = 338.0
offset_bottom = 312.0
scale = Vector2(0.289775, 0.292406)
icon = ExtResource("4_qhte6")
flat = true

[connection signal="pressed" from="Jugar de nuevo" to="." method="_on_jugar_de_nuevo_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Instagram" to="." method="_on_instagram_pressed"]
